<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    tools:context="kpi.mobcomp.korean_grammar.activities.Home"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:weightSum="1">

    <TextView
        android:text="@string/hello_username"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:id="@+id/hello_string"
        android:layout_weight="0.09" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_noun"
        android:id="@+id/button_noun"
        android:onClick="startNouns"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_verb"
        android:id="@+id/button_verb"
        android:onClick="startVerbs"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_grammar"
        android:id="@+id/button_grammar"
        android:onClick="startGrammar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_numbers"
        android:id="@+id/button_numbers"
        android:onClick="startNumbers"/>
</LinearLayout>