<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="kpi.mobcomp.korean_grammar.Verbs">

    <TextView
        android:text="@string/button_verb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_to_like"
        android:id="@+id/button_to_like"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_to_love"
        android:id="@+id/button_to_love"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_to_travel"
        android:id="@+id/button_to_travel"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_to_wait"
        android:id="@+id/button_to_wait"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>


</LinearLayout>
