<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="kpi.mobcomp.korean_grammar.activities.Grammar">

    <TextView
        android:text="@string/button_grammar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grammar_symnida"
        android:id="@+id/grammar_symnida"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/grammar_symnika"
        android:id="@+id/grammar_symnika"
        android:layout_gravity="center_horizontal"
        android:onClick="showEntry"/>


</LinearLayout>
